# nthlayer-correlate

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.beads.archived/: metadata.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-18-sitrep-phase2.md
docs/superpowers/specs/: 2026-03-17-sitrep-phase2-design.md
prompts/: reasoning.yaml  snapshot.yaml
scenarios/synthetic/: cascading-failure.yaml  misleading-correlation.yaml  multi-candidate.yaml  quiet-period.yaml  simple-causal-chain.yaml
src/nthlayer_correlate/: __init__.py  cli.py  config.py  notifications.py  prometheus.py  reasoning.py  state.py  types.py
src/nthlayer_correlate/correlation/: changes.py  dedup.py  engine.py  temporal.py  topology.py
src/nthlayer_correlate/ingestion/: protocol.py  severity.py  webhook.py
src/nthlayer_correlate/snapshot/: generator.py  model.py  token.py
src/nthlayer_correlate/store/: __init__.py  protocol.py  sqlite.py
src/nthlayer_correlate/traces/: __init__.py  protocol.py  tempo.py  topology.py
src/sitrep/: cli.py  state.py
src/sitrep/correlation/: __init__.py  changes.py  dedup.py  engine.py  temporal.py  topology.py
src/sitrep/ingestion/: __init__.py  protocol.py  severity.py  webhook.py
src/sitrep/snapshot/: __init__.py  generator.py  model.py
src/sitrep/store/: __init__.py  protocol.py  sqlite.py
tests/: conftest.py  test_cli.py  test_correlate_command.py  test_correlation_changes.py  test_correlation_dedup.py  test_correlation_engine.py  test_correlation_temporal.py  test_correlation_topology.py  test_ingestion.py  test_reasoning.py  test_severity.py  test_snapshot_generator.py  test_snapshot_model.py  test_state.py  test_store.py  test_trace_protocol.py  test_trace_tempo.py  test_trace_topology.py  test_types.py
