[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer-correlate"
version = "0.3.0"
description = "Situational awareness through automated signal correlation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml>=6.0.1",
    "structlog>=24.1",
    "httpx>=0.27",
    "nthlayer-common",
    "nthlayer-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[project.scripts]
nthlayer-correlate = "nthlayer_correlate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
nthlayer-common = { path = "../nthlayer-common" }
nthlayer-learn = { path = "../nthlayer-learn/lib/python" }

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
